--- a/_css/style.css
+++ b/_css/style.css
@@ -1,19 +1,17 @@
 /*====================== Global =======================*/
 * {
-    --vine: #a33404;
+    --wine: #a30404;
     --yellow: #fed40e;
-    --gray: #e5e5e5;
+    --grey: #e5e5e5;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-size: 93.75%;
-    /*100% - 16px | 93.75% - 15px */
-
-
+    /* 100% = 16px | 93.75% = 15px */
 }
 
 html {
-    overflow-y: hidden;
+    overflow-x: hidden;
     scroll-behavior: smooth;
 }
 
@@ -22,52 +20,170 @@ html {
 }
 
 body {
-    font-family: "Montserrat";
-    sans-serif;
-    background-color: var(--vine) url(../_assets/img/bg_icons.svg);
-    /*configura a imagem de fundo fazendo com que ela se 
-    movimente junto com a página ou fique fixa*/
-    background-attachment: fixed;
-    /*encaixa a imagem sem repetir e centralizada */
-    background-size: cover;
+    font-family: "Montserrat", sans-serif;
 
+    background: var(--wine) url(../assets/img/bg_icons.svg);
+    /* Configura a imagem de fundo fazendo com que ela se movimente junto com a página ou fique fixe */
+    background-attachment: fixed;
+    /* Encaixa a imagem onde ela foi colocada sem repetir e centralizada. */
+    background-size: cover;
 }
 
-/*em = sempre será relaiva ao tamanho da fonte definida no elemento pai
-exemplo: 1em ele irá colocar uma vez o tamanho do elemento pai, caso o pai não
-tenha um tamanho definido ele irá considerar o padrão do navegador que será 16px.
-rem= sempre será relativa a fonte definida no elemento : root, caso não tenha fonte 
-definida no: root irá pegar o padrão do navegador que será 16px */
-.container {
-    width: min(90vw, 800w);
+/* 
+    em = sempre será relativa ao tamanho à propriedade da classe pai. exemplo: font-size:1em ele irá colocar uma vez o tamanho do elemento pai, caso o pai não tinha um tamanho definido ele irá considerar o padrão do navegador
+que será 16px 
+    rem = sempre será relativa a fonte definida no elemento :root, caso não tenha definida :root irá pegar o padrão do navegador que será 16px
+*/
+.container{
+    width: min(90vw, 800vw);
     padding-top: 4rem;
     margin: auto;
 }
-
-img.fluid {
+.img-fluid{
     width: max(14vw, 100px);
     object-fit: cover;
 }
-
-.flex-center-full {
+.flex-center-full{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-
-.row {
+.row{
     flex-direction: row;
 }
-
-.text-center {
+.text-center{
     text-align: center;
 }
+/* FIM resets gerais */
 
-/* ========================  Titles  ========================= */
-.titulo-banner h1 {
+/* ================ HEADER =================== */
+header ul li a{
+    padding: 10px;
+    color:var(--wine);
+    transition: all 0.3s;
+}
+
+header ul li a.item-menu:hover{
+    background: var(--wine);
+    color: var(--yellow);
+}
+
+header{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+header ul{
+    background: var(--yellow);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 2rem;
+    padding: 12px 30px;
+    height: 55px;
+    min-width: 800px;
+
+    
+}
+
+
+header ul li{
+    list-style: none;
+    font-family: "Rum Raisin", sans-serif;
+    font-size: 2.2rem;
+    text-transform: uppercase;
+
+}
+
+
+
+/* =========== LINKS AND BUTTONS ============== */
+a{
+    text-decoration: none;
+}
+
+
+button{
+    background: var(--yellow);
+    cursor: pointer;
+
+    padding: 10px 35px;
+    margin-top: 10px;
+
+    border: none;
+    border-radius: 30px;
+    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.87);
+
+    color: var(--wine);
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-family: "Rum Raisin", sans-serif;
+    transition: all 0.3s ease;
+}
+
+button:hover{
+    background: #fff;
+    color: var(--wine);
+    padding: 10px 50px;
+}
+
+
+
+
+
+/* ============= TITLES ================ */
+.titulo-banner h1{
     font-family: "Rum Raisin", sans-serif;
     font-weight: normal;
-    font-size: 5em;
-    color: var(--yellow)
+    font-size: 5rem;
+    color: var(--yellow);
+}
+
+
+
+
+
+/* =============== BANNER ============== */
+.slider{
+    display: flex;
+    transition: all ease .4s;
+}
+
+.banner{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100vw;
+    height: 75vh;
+}
+
+.img-titulo-banner img{
+    min-width: 400px;
+
+}
+
+.description-banner{
+    position:relative;
+    top:-30px;
+    max-width: 380px;
+}
+
+.left-banner p{
+    line-height: 44px;
+    letter-spacing: 0.8px;
+    color: #fff;
+    font-family: "Rum Raisin", sans-serif;
+}
+
+.description-banner p:first-child{
+    font-family: "Rum Raisin", sans-serif;
+    font-size: 1.9rem;
+}
+
+.d-none img{
+    max-width: 600px;
 }
