--- a/_css/style.css
+++ b/_css/style.css
@@ -22,7 +22,7 @@ html {
 body {
     font-family: "Montserrat", sans-serif;
 
-    background: var(--wine) url(../assets/img/bg_icons.svg);
+    background: var(--wine) url(../_assets/img/bg_icons.svg);
     /* Configura a imagem de fundo fazendo com que ela se movimente junto com a página ou fique fixe */
     background-attachment: fixed;
     /* Encaixa a imagem onde ela foi colocada sem repetir e centralizada. */
@@ -34,42 +34,47 @@ body {
 que será 16px 
     rem = sempre será relativa a fonte definida no elemento :root, caso não tenha definida :root irá pegar o padrão do navegador que será 16px
 */
-.container{
+.container {
     width: min(90vw, 800vw);
     padding-top: 4rem;
     margin: auto;
 }
-.img-fluid{
+
+.img-fluid {
     width: max(14vw, 100px);
     object-fit: cover;
 }
-.flex-center-full{
+
+.flex-center-full {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.row{
+
+.row {
     flex-direction: row;
 }
-.text-center{
+
+.text-center {
     text-align: center;
 }
+
 /* FIM resets gerais */
 
 /* ================ HEADER =================== */
-header ul li a{
+header ul li a {
     padding: 10px;
-    color:var(--wine);
+    color: var(--wine);
     transition: all 0.3s;
 }
 
-header ul li a.item-menu:hover{
+header ul li a.item-menu:hover {
     background: var(--wine);
     color: var(--yellow);
 }
 
-header{
+header {
     text-align: center;
     display: flex;
     justify-content: center;
@@ -77,7 +82,7 @@ header{
     flex-direction: column;
 }
 
-header ul{
+header ul {
     background: var(--yellow);
     display: flex;
     justify-content: space-between;
@@ -87,11 +92,11 @@ header ul{
     height: 55px;
     min-width: 800px;
 
-    
+
 }
 
 
-header ul li{
+header ul li {
     list-style: none;
     font-family: "Rum Raisin", sans-serif;
     font-size: 2.2rem;
@@ -99,15 +104,17 @@ header ul li{
 
 }
 
-
-
 /* =========== LINKS AND BUTTONS ============== */
-a{
+a {
     text-decoration: none;
 }
 
+.box-arrow-down a{
+color: var(--yellow);
 
-button{
+}
+
+button {
     background: var(--yellow);
     cursor: pointer;
 
@@ -125,18 +132,15 @@ button{
     transition: all 0.3s ease;
 }
 
-button:hover{
+button:hover {
     background: #fff;
     color: var(--wine);
     padding: 10px 50px;
 }
 
 
-
-
-
 /* ============= TITLES ================ */
-.titulo-banner h1{
+.titulo-banner h1 {
     font-family: "Rum Raisin", sans-serif;
     font-weight: normal;
     font-size: 5rem;
@@ -148,12 +152,28 @@ button:hover{
 
 
 /* =============== BANNER ============== */
-.slider{
+.slider {
     display: flex;
     transition: all ease .4s;
 }
+.controls-slide {
+    margin: auto;
+    display: flex;
+    width: 40vw;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: -2rem;
+}
+.controls-slide i{
+    font-size: 2rem;
+    color: var(--yellow);
+    opacity: .6;
+    cursor: pointer;
+    text-shadow: 1px 1px 20px #000;
+    transition: all ease .2s;
+}
 
-.banner{
+.banner {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -161,29 +181,64 @@ button:hover{
     height: 75vh;
 }
 
-.img-titulo-banner img{
+.img-titulo-banner img {
     min-width: 400px;
 
 }
 
-.description-banner{
-    position:relative;
-    top:-30px;
+.description-banner {
+    position: relative;
+    top: -30px;
     max-width: 380px;
 }
 
-.left-banner p{
+.left-banner p {
     line-height: 44px;
     letter-spacing: 0.8px;
     color: #fff;
     font-family: "Rum Raisin", sans-serif;
 }
 
-.description-banner p:first-child{
+/*first-child = seleciona o primeiro filho dentro do elento pai. :nth-child(
+    permite especificar qual elemento filho deseja ser selecionado. Exemplo
+    nth-cild(2) irá selecionar apesar o filho na segunda posição dentro do pai */
+
+.description-banner p:first-child {
     font-family: "Rum Raisin", sans-serif;
     font-size: 1.9rem;
 }
 
-.d-none img{
-    max-width: 600px;
+
+.description-banner p {
+    font-size: 1.6rem;
+}
+
+.description-banner i {
+    margin-left: 10px;
+    font-size: 2rem;
+}
+
+.right-banner img {
+    max-width: 550px;
+    transition: all 0.3s;
+}
+
+.right-banner img:hover {
+    transform: scale(1.02);
+    /*scale() = aumenta o tamanho do elemento como se estivesse dando um zoom*/
+}
+
+.box-arrow-down {
+    margin-top: 2rem;
+    font-size: 3rem;
+}
+
+.box-arrow-down i {
+    text-shadow: 1px 1px 20px #000;
+    opacity: 0.7;
+    transition: all 0.2s;
+}
+
+.box-arrow-down i:hover, .controls-slide i:hover, .btn-cardapio:hover, .active {
+    opacity: 1;
 }
