--- a/_css/style.css
+++ b/_css/style.css
@@ -1,4 +1,4 @@
-/*====================== Global =======================*/
+/*======================== GLOBAL ===========================*/
 * {
     --wine: #a30404;
     --yellow: #fed40e;
@@ -62,7 +62,7 @@ que será 16px
 
 /* FIM resets gerais */
 
-/* ================ HEADER =================== */
+/* ======================= HEADER ============================ */
 header ul li a {
     padding: 10px;
     color: var(--wine);
@@ -92,26 +92,22 @@ header ul {
     height: 55px;
     min-width: 800px;
 
-
 }
-
 
 header ul li {
     list-style: none;
     font-family: "Rum Raisin", sans-serif;
     font-size: 2.2rem;
     text-transform: uppercase;
-
 }
 
-/* =========== LINKS AND BUTTONS ============== */
+/* =================== LINKS AND BUTTONS ======================= */
 a {
     text-decoration: none;
 }
 
-.box-arrow-down a{
-color: var(--yellow);
-
+.box-arrow-down a {
+    color: var(--yellow);
 }
 
 button {
@@ -138,8 +134,27 @@ button:hover {
     padding: 10px 50px;
 }
 
+.btn-cardapio {
+    border: 3px solid var(--yellow);
+    border-radius: 46px;
+    filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.87));
+    padding: 8px;
+    margin-top: 40px;
+    width: 160px;
+    text-align: center;
+    cursor: pointer;
+    opacity: 0.6;
+    transition: all 0.3s;
+}
 
-/* ============= TITLES ================ */
+.btn-cardapio:hover {
+    color: var(--wine);
+    background: var(--yellow);
+    transform: scale(1.05);
+}
+
+
+/* ==================== TITLES =============================== */
 .titulo-banner h1 {
     font-family: "Rum Raisin", sans-serif;
     font-weight: normal;
@@ -147,15 +162,43 @@ button:hover {
     color: var(--yellow);
 }
 
+h2,
+h4 {
+    font-family: "Rum Raisin", sans-serif;
+    font-weight: normal;
+    color: var(--wine);
+
+}
+
+h2 {
+    color: var(--yellow);
+    font-size: 3.5rem;
+    text-transform: uppercase;
+
+}
+
+.dishes-day .col-1 h3:first-child {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+.dishes-day .col-1 #box-dish-main .first-dish h4 {
+    color: var(--yellow);
+}
+
+.dishes-day h4 {
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    color: var(--wine);
+}
 
 
-
-
-/* =============== BANNER ============== */
+/* ====================== BANNER ============================ */
 .slider {
     display: flex;
     transition: all ease .4s;
 }
+
 .controls-slide {
     margin: auto;
     display: flex;
@@ -164,7 +207,8 @@ button:hover {
     justify-content: space-around;
     margin-top: -2rem;
 }
-.controls-slide i{
+
+.controls-slide i {
     font-size: 2rem;
     color: var(--yellow);
     opacity: .6;
@@ -243,7 +287,7 @@ button:hover {
     opacity: 1;
 }
 
-/*========================= Section Cardápio ===========================*/
+/*========================= SECTION CARDÁPIO ===========================*/
 .cardapio {
     background: #e5e5e5 url(../_assets/img/bg_icons.svg);
     background-size: cover;
@@ -255,11 +299,13 @@ button:hover {
     align-items: center;
 
 }
+
 .box-cardapio {
     display: grid;
     grid-template-columns: 1fr 3fr;
     padding: 4rem 0;
 }
+
 .days-week {
     display: flex;
     flex-direction: column;
@@ -270,11 +316,13 @@ button:hover {
     background-size: cover;
     background-attachment: fixed;
 }
+
 .box-btn-cardapio {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .box-btn-cardapio a {
     text-decoration: none;
     text-transform: uppercase;
@@ -282,14 +330,91 @@ button:hover {
     font-weight: 700;
     color: var(--yellow);
 }
+
 .box-btn-cardapio a:first-child {
     margin-top: 5px;
-    
+
 }
+
 .dishes-day {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap:50px ;
+    grid-column-gap: 50px;
     padding: 140px 60px 50px 20px;
-    background: rgba(229,229,229,0.7);
+    background: rgba(229, 229, 229, 0.7);
+}
+
+.dishes-day .col-1 {
+    display: flex;
+    flex-direction: column;
+
+}
+
+#box-dish-main div:first-child {
+    background: var(--wine);
+    padding: 10px 15px;
+    border-radius: 15px;
+    margin-top: 20px;
+}
+
+.contents-box-dish {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contents-box-dish p {
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-top: 6px;
+}
+
+.contents-box-dish p small {
+    margin-left: 2px;
+    font-size: 0.8rem;
+
+}
+
+.dish {
+    padding: 10px 15px;
+    margin-top: 20px;
+}
+
+.dish p {
+    color: #000;
+}
+/*=========================SECTION GALLERY ========================*/
+
+.box-galeria {
+    display: flex;
+    justify-content: center;
+    background: #e5e5e5 url(../_assets/img/bg_icons.svg);
+    background-size: cover;
+    background-attachment: fixed;
+    padding-bottom: 100px;
+}
+.container-fotos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box-fotos {
+    display: grid;
+    /*repeat() = define quantas colunas irão existir no grid e qual o tamanho que estas colunas irão ocupar*/
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 45px;
+    margin-top: 20px;
+}
+
+.box-galeria img {
+    height: auto;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s;
+
+}
+#box-galeria img:hover {
+    transform: scale(1.05);
+    filter: grayscale(100%);
+
 }
